:art: Add docs to footer

--- a/site/_includes/footer.njk
+++ b/site/_includes/footer.njk
@@ -2,6 +2,7 @@
   <div class="container">
     <p>Made by <a href="https://openlab.ncl.ac.uk">Open Lab</a></p>
     <p class="links">
+      <a href="https://docs.gecotoolbox.io">docs</a>
       <a href="{{ '/about' | url }}">about</a>
       <a href="{{ '/terms' | url }}">terms</a>
       <a href="{{ '/privacy' | url }}">privacy</a>
