--- a/site/_layouts/home.njk
+++ b/site/_layouts/home.njk
@@ -21,12 +21,9 @@ layout: base
       </div>
     </div>
   </section>
-  <section class="section is-size-5">
+  <section class="section">
     <div class="container">
       <div class="buttons is-centered">
-        <a class="button is-info is-large" href="{{ site.requestUrl }}">
-          Request a deployment
-        </a>
         <a class="button is-text is-large" href="{{ '/about' | url }}">
           Find out more →
         </a>
