--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -3,7 +3,7 @@
     <p>Made by <a href="https://openlab.ncl.ac.uk">Open Lab</a></p>
     <p class="links">
       {# <a href="https://docs.gecotoolbox.io">docs</a> #}
-      <a href="{{ '/about' | url }}">about</a>
+      <a href="{{ '/about' | localeUrl }}">about</a>
       <a href="{{ '/terms' | url }}">terms</a>
       <a href="{{ '/privacy' | url }}">privacy</a>
     </p>
