--- a/src/_layouts/about.njk
+++ b/src/_layouts/about.njk
@@ -1,5 +1,6 @@
 ---
 layout: base
+action: Register your interest
 ---
 
 {% include 'navbar.njk' %}
@@ -16,7 +17,7 @@ layout: base
     <div class="container">
       <div class="buttons is-centered">
         <a class="button is-info is-large" href="{{ site.requestUrl }}">
-          Register your interest
+          {{ action }}
         </a>
       </div>
     </div>
