--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -18,9 +18,9 @@ $body-family: 'IBM Plex Sans', 'system-ui', -apple-system, BlinkMacSystemFont,
 $family-monospace: 'SF Mono', Consolas, 'Liberation Mono', Menlo, Courier,
   monospace;
 
-$title-family: 'Dosis', $body-family;
+$title-family: 'Rubik', $body-family;
 $subtitle-family: $title-family;
-$title-weight: 700;
+$title-weight: 500;
 
 $button-family: $title-family;
 $button-weight: 700;
