--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -4,8 +4,8 @@
     <p class="links">
       {# <a href="https://docs.gecotoolbox.io">docs</a> #}
       <a href="{{ '/about' | localeUrl }}">about</a>
-      <a href="{{ '/terms' | url }}">terms</a>
-      <a href="{{ '/privacy' | url }}">privacy</a>
+      <a href="{{ '/en/terms' | url }}">terms</a>
+      <a href="{{ '/en/privacy' | url }}">privacy</a>
     </p>
   </div>
 </footer>
