--- a/src/_includes/navbar.njk
+++ b/src/_includes/navbar.njk
@@ -1,4 +1,4 @@
-<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+<nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="container">
     <div class="navbar-menu">
       <div class="navbar-brand">
