add "open source" link to the footer

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -10,6 +10,7 @@
       <a href="{{ '/about' | localeUrl }}">about</a>
       <a href="{{ '/en/terms' | url }}">terms</a>
       <a href="{{ '/en/privacy' | url }}">privacy</a>
+      <a href="http://github.com/digitalinteraction/gecotoolbox.io">open source</a>
     </p>
   </div>
 </footer>
