--- a/src/_layouts/home.njk
+++ b/src/_layouts/home.njk
@@ -30,6 +30,19 @@ action: Go to the services
         </a>
         {% endfor %}
       </div>
+      <hr />
+      <h3 class="title is-5">The gE.CO platform</h3>
+      <div class="buttons">
+        <a
+          href="http://generative-commons.eu"
+          class="button is-geco is-primary"
+        >
+          Visit the gE.CO website
+        </a>
+        <a href="https://geco.firstlife.org" class="button is-geco is-link">
+          Visit the gE.CO map
+        </a>
+      </div>
     </div>
   </section>
 </main>
