--- a/src/_includes/services.njk
+++ b/src/_includes/services.njk
@@ -77,6 +77,7 @@
   }
   .services-filters .tag {
     cursor: pointer;
+    user-select: none;
   }
   .services .media {
     align-items: center;
