--- a/src/_layouts/home.njk
+++ b/src/_layouts/home.njk
@@ -36,10 +36,17 @@ action: Go to the services
         <a
           href="http://generative-commons.eu"
           class="button is-geco is-primary"
+          target="_blank"
+          rel="noopener"
         >
           Visit the gE.CO website
         </a>
-        <a href="https://geco.firstlife.org" class="button is-geco is-link">
+        <a
+          href="https://geco.firstlife.org"
+          class="button is-geco is-link"
+          target="_blank"
+          rel="noopener"
+        >
           Visit the gE.CO map
         </a>
       </div>
