--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -32,6 +32,7 @@ $popup: #e56399;
 $widescreen-enabled: false;
 $fullhd-enabled: false;
 
+$box-radius: 8px;
 $modal-content-width: 1024px;
 
 $body-family: 'system-ui', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
@@ -136,6 +137,7 @@ $navbar-breakpoint: 0;
   }
 }
 
+.cover-video,
 .cover-image {
   $height: ($desktop - (2 * $gap)) / 1.2;
 
