--- a/src/_includes/services.njk
+++ b/src/_includes/services.njk
@@ -77,13 +77,19 @@
       window.showModal(`
         <div class="box">
           <h1 class="title">${button.dataset.title}</h1>
-          <div class="iframeEmbed">
-            <iframe
-              allowfullscreen=""
-              scrolling="no"
-              src="${button.dataset.video}"
-              title="${button.dataset.title}"
-            ></iframe>
+          <div class="geco-card">
+            <div class="iframeEmbed">
+              <iframe
+                src="${button.dataset.video}"
+                width="100%"
+                height="100%"
+                frameborder="0"
+                allow="autoplay; fullscreen; picture-in-picture"
+                allowfullscreen="allowfullscreen"
+                scrolling="no"
+                title="${button.dataset.title}"
+              ></iframe>
+            </div>
           </div>
         </div>
       `)
@@ -124,7 +130,7 @@
     align-items: center;
     min-height: 120px;
   }
-  .geco-card {
+  .card.geco-card {
     padding: 8px;
   }
   figure.image {
