--- a/src/_layouts/about.njk
+++ b/src/_layouts/about.njk
@@ -10,8 +10,11 @@ action: Register your interest
     <div class="container">
       <div class="content">
         {{ content | safe }}
+        
+        <hr>
+        
+        <h2>The gE.CO project is now over</h2>
       </div>
-      {% include 'services.njk' %}
     </div>
   </section>
 </main>
