add contact email

--- a/src/_layouts/about.njk
+++ b/src/_layouts/about.njk
@@ -11,6 +11,12 @@ action: Register your interest
       <div class="content">
         {{ content | safe }}
         <h3>The gE.CO project is now over</h3>
+        <p>
+          For more infomation please contact
+          <a href="mailto:vasilis.vlachokyriakos1@newcastle.ac.uk?subject=gE.CO%20toolbox">
+            gecotoolbox.io </a
+          >.
+        </p>
       </div>
     </div>
   </section>
