--- a/src/index.njk
+++ b/src/index.njk
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="refresh" content="0; url={{ '/en' | url }}" />
+    <meta http-equiv="refresh" content="0; url="/en/" />
   </head>
   <body>
-    <p><a href="{{ '/en' | url }}">Redirecting</a></p>
+    <p><a href="/en/">Redirecting...</a></p>
   </body>
 </html>
