--- a/src/index.njk
+++ b/src/index.njk
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="refresh" content="0; url="/en/" />
+    <meta http-equiv="refresh" content="0; url=/en/" />
   </head>
   <body>
     <p><a href="/en/">Redirecting...</a></p>
