--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -7,9 +7,9 @@
     </p>
     <p class="links">
       <a href="https://docs.gecotoolbox.io">docs</a>
-      <a href="{{ '/about' | localeUrl }}">about</a>
-      <a href="{{ '/en/terms' | url }}">terms</a>
-      <a href="{{ '/en/privacy' | url }}">privacy</a>
+      <a href="{{ '/about/' | localeUrl }}">about</a>
+      <a href="{{ '/en/terms/' | url }}">terms</a>
+      <a href="{{ '/en/privacy/' | url }}">privacy</a>
       <a href="http://github.com/digitalinteraction/gecotoolbox.io">open source</a>
     </p>
   </div>
